# RNTransformer

./: .gitignore  README.md  data_import.py  data_loader.py  feature_maps_epoch_final.pt  gcn_dataset_loader.py  main.py  pyproject.toml  requirements.txt  run.py  run_stg.py  test.py  test_rn.py  train_rn.py  validation.py  vis.ipynb  vis.py
models/: LocalPedsTrajNet.py  PedsTrajNet.py  RNGCN.py  SocialImplicit.py  SocialLSTM.py  SocialStgcnn.py  TrajNetPlusPlus.py  TrajectoryModel.py  __init__.py  simple.py  tgcn.py
scripts/: predict.sh  run.sh  run_eth.sh  run_loc.sh  run_rn.sh  test_peds.sh  test_rn.sh  train_peds.sh  train_rn.sh  val_peds.sh  vis.sh  visualize.sh
utils/: metrics.py  static_graph_temporal_signal.py
